--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,6 +26,9 @@ security:
                 login_path: /login
                 check_path: /login
                 default_target_path: catalog
+            logout:
+                path: /logout
+                target: /
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
