--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,15 +2,10 @@
 # http://symfony.com/doc/current/book/security.html
 security:
     providers:
-        db_provider:
-            entity:
-                class: AppBundle:User
-                property: email
-                # if you're using multiple entity managers
-                # manager_name: customer
+        our_users:
+            entity: { class: AppBundle\Entity\User, property: email }
     encoders:
-        AppBundle\Entity\User:
-            algorithm: bcrypt
+        AppBundle\Entity\User: bcrypt
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -19,24 +14,20 @@ security:
             security: false
 
         main:
-            pattern: ^/
             anonymous: ~
-            provider: db_provider
-            form_login:
-                login_path: /login
-                check_path: /login
-                default_target_path: catalog
+            guard:
+                authenticators:
+                    - app.security.login_form_authenticator
             logout:
                 path: /logout
-                target: /
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN: [ROLE_MANAGE_PRODUCT, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_MOD:
+        ROLE_USER:
+
 
     access_control:
         # require ROLE_ADMIN for /admin*
         #- { path: /, roles: ROLE_USER }
-        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
