--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,11 +23,16 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_MANAGE_PRODUCT, ROLE_ALLOWED_TO_SWITCH]
-        ROLE_MOD:
-        ROLE_USER:
+        ROLE_MOD: [ROLE_MANAGE_PRODUCT]
+        ROLE_USER: [ROLE_BROWSE_CATALOG]
 
 
     access_control:
         # require ROLE_ADMIN for /admin*
         #- { path: /, roles: ROLE_USER }
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: [ROLE_MANAGE_PRODUCT, ROLE_BROWSE_CATALOG] }
+        - { path: ^/admin, roles: ROLE_MOD }
+        - { path: ^/catalog, roles: ROLE_USER }
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
