--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,17 +22,17 @@ security:
                 path: /logout
 
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_MANAGE_PRODUCT, ROLE_ALLOWED_TO_SWITCH]
-        ROLE_MOD: [ROLE_MANAGE_PRODUCT]
+        ROLE_ADMIN: [ROLE_MANAGE_PRODUCT, ROLE_MANAGE_CATEGORY, ROLE_MANAGE_USER, ROLE_BROWSE_CATALOG, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_MOD: [ROLE_MANAGE_PRODUCT, ROLE_MANAGE_CATEGORY, ROLE_BROWSE_CATALOG]
         ROLE_USER: [ROLE_BROWSE_CATALOG]
 
 
     access_control:
         # require ROLE_ADMIN for /admin*
         #- { path: /, roles: ROLE_USER }
-        - { path: ^/admin, roles: [ROLE_MANAGE_PRODUCT, ROLE_BROWSE_CATALOG] }
-        - { path: ^/admin, roles: ROLE_MOD }
-        - { path: ^/catalog, roles: ROLE_USER }
+        - { path: ^/admin/user, roles: ROLE_MANAGE_USER }
+        - { path: ^/admin/product, roles: ROLE_MANAGE_PRODUCT }
+        - { path: ^/catalog, roles: ROLE_BROWSE_CATALOG }
         - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
