--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,17 +4,14 @@ parameters:
 #    parameter_name: value
 
 services:
-<<<<<<< HEAD
     password_recovery:
         class: AppBundle\Services\PasswordRecoveryService
-        arguments: ["@service_container", "@doctrine.orm.entity_manager"]
-        calls:
-          - [setContainer, ["@service_container"]]
+        autowire: true
+#        arguments: ["@service_container", "@doctrine.orm.entity_manager"]
     form_utils:
         class: AppBundle\Services\FormUtilsService
 #        arguments: ["@security.password_encoder"]
 # , "plain_value", "%parameter_name%"
-=======
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
@@ -27,4 +24,3 @@ services:
         autowire: true
         tags:
             - { name: doctrine.event_subscriber }
->>>>>>> ea22e7c668f4d1d8f998460c961b1444edc08882
