--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,6 +20,7 @@ security:
                     - app.security.login_form_authenticator
             logout:
                 path: /logout
+            switch_user: true
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_MANAGE_PRODUCT, ROLE_MANAGE_CATEGORY, ROLE_MANAGE_USER, ROLE_BROWSE_CATALOG, ROLE_ALLOWED_TO_SWITCH]
