--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -19,7 +19,7 @@ services:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
     app.security.login_form_authenticator:
-        class: AppBundle\Secutiry\LoginFormAuthenticator
+        class: AppBundle\Security\LoginFormAuthenticator
         autowire: true
 
     app.doctrine.hash_password_listener:
